# doggy

./: README.md  build.sh  configure.ac
src/: Makefile.am  README.doc  hello.cpp
src/computer/: hello.c
src/computor/: Makefile.am
src/level0/algo/other/: queen.cpp
src/level0/algorithm_fan/20171110/: af171110_01.cpp
src/level0/algorithm_fan/20171113/: af171113_01.cpp
src/level0/datastructure_and_algo/: README.doc
src/level0/datastructure_and_algo/33/: dna33_01.cpp
src/level0/datastructure_and_algo/34/: dna34_01.cpp  test.cpp  test2.cpp  test3.cpp
src/level0/datastructure_and_algo/35/: dna35_01.cpp  dna35_02.cpp  dna35_03.cpp
src/level0/datastructure_and_algo/36/: dna36_01.cpp  dna36_02.cpp
src/level0/myalgo/lock/: spinlock2.cpp
src/level0/myalgo/queue/: lockfree_queue.cpp  nolock_queue.cpp
src/level0/perf_flame_graph/: cleanup.sh  diff_flame.sh  flame.sh
src/level0/perf_flame_graph/tool/: difffolded.pl  flamegraph.pl
src/level0/python/: class_hello.py  hello.py  print_pin.py  thread.py  type_check.py
src/level0/python/cli/: option_parser.py
src/level0/python/print/: p3.py  progress.py  progress2.py
src/level0/system/lock/: spinlock.cpp
src/level1/BlockChain/: block_chain.py  global_var.py  logger.py  miner.py  world.py
src/level1/blockchain/: miner.py  readme_blockchain.doc  world.py
