
dna_programs=dna33_01 dna34_01 dna35_01 dna35_02 dna35_03 dna36_01 dna36_02

af_programs=af171110_01

noinst_PROGRAMS=doggy Hello_C queen $(dna_programs) $(af_programs)
doggy_SOURCES=hello2.cpp

Hello_C_SOURCES=computer/hello.c

queen_SOURCES=level0/algo/other/queen.cpp

dna33_01_SOURCES=level0/datastructure_and_algo/33/dna33_01.cpp
dna34_01_SOURCES=level0/datastructure_and_algo/34/dna34_01.cpp
dna35_01_SOURCES=level0/datastructure_and_algo/35/dna35_01.cpp
dna35_02_SOURCES=level0/datastructure_and_algo/35/dna35_02.cpp
dna35_03_SOURCES=level0/datastructure_and_algo/35/dna35_03.cpp
dna36_01_SOURCES=level0/datastructure_and_algo/36/dna36_01.cpp
dna36_02_SOURCES=level0/datastructure_and_algo/36/dna36_02.cpp

af171110_01_SOURCES=level0/algorithm_fan/20171110/af171110_01.cpp

