
dna_programs=dna33_01 dna34_01 dna35_01 dna35_02 dna35_03 dna36_01 dna36_02

af_programs=af171101_01 af171110_01 af171113_01

myalgo_programs=lockfree_queue spinlock

noinst_PROGRAMS=doggy Hello_C $(dna_programs) $(af_programs) $(myalgo_programs)

doggy_SOURCES=hello2.cpp

Hello_C_SOURCES=computer/hello.c

dna33_01_SOURCES=level0/datastructure_and_algo/33/dna33_01.cpp
dna34_01_SOURCES=level0/datastructure_and_algo/34/dna34_01.cpp
dna35_01_SOURCES=level0/datastructure_and_algo/35/dna35_01.cpp
dna35_02_SOURCES=level0/datastructure_and_algo/35/dna35_02.cpp
dna35_03_SOURCES=level0/datastructure_and_algo/35/dna35_03.cpp
dna36_01_SOURCES=level0/datastructure_and_algo/36/dna36_01.cpp
dna36_02_SOURCES=level0/datastructure_and_algo/36/dna36_02.cpp

af171101_01_SOURCES=level0/algorithm_fan/20171101/af171101_01.cpp
af171110_01_SOURCES=level0/algorithm_fan/20171110/af171110_01.cpp
af171113_01_SOURCES=level0/algorithm_fan/20171113/af171113_01.cpp

lockfree_queue_SOURCES=level0/myalgo/queue/lockfree_queue.cpp
lockfree_queue_LDFLAGS= -pthread

spinlock_SOURCES=level0/myalgo/lock/spinlock.cpp
spinlock_LDFLAGS= -pthread



